<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_l"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_verbose"
            android:icon="@drawable/ic_l"
            android:title="@string/nav_verbose" />
        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_l"
            android:title="@string/nav_debug" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_l"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_warn"
            android:icon="@drawable/ic_l"
            android:title="@string/nav_warn" />
        <item
            android:id="@+id/nav_error"
            android:icon="@drawable/ic_l"
            android:title="@string/nav_error" />
        <item
            android:id="@+id/nav_assert"
            android:icon="@drawable/ic_l"
            android:title="@string/nav_assert" />
    </group>

</menu>